fixed white space for mobile 500px under

--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,79 @@ table, th, td {
 
 
 /* ----------------------media settings-------------------*/
-@media screen and (min-width: 300px) and (max-width: 1100px) {
+@media screen and (min-width: 300px) and (max-width: 505px) {
+	html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+}
+
+.menu-list {
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.tab a {
+  display: block;
+  padding: 20px 50px;
+}
+
+.title {
+	display: center;
+	width:100%;
+	margin-left: 30%;
+	font-size: 300%;
+}
+
+.description {
+	width: 120%;
+	margin-left: 30%;
+}
+
+.front-section {
+	width:150%;
+}
+
+.traits-container {
+	width:50%;
+}
+
+.project-container { 
+	display: inline;
+	width: 300vw;
+}
+
+.project {
+	height: 80vw;
+	width: 150vw;
+	margin-left:50px;
+	margin-bottom: 15%;
+}
+
+.project-title {
+	font-size: 10vw;
+	width: 150vw;
+}
+
+.contact-container {
+	width: 160vw;
+}
+
+.contact-icon i{
+	font-size: 12vw;
+	padding:10px;
+	margin-left: 5vw;
+}
+}
+
+@media screen and (min-width: 506px) and (max-width: 1100px) {
 html {
   height: 100%;
   width: 100%;
